apps/base/fernfiles/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 3300
      targetPort: 3300
  type: ClusterIP
